--- a/template-10.html
+++ b/template-10.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>CV-Template 10</title>    
-    <script src="https://use.fontawesome.com/334b91c43a.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" media="screen" href="css/template10.css">
-<script src="js/jquery.js"></script>
-    </head>
-  
+	<title>CV-Template 10</title>
+	<script src="https://use.fontawesome.com/334b91c43a.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" media="screen" href="css/template10.css">
+	<link rel="stylesheet" type="text/css" media="screen" href="css/downloadButton.css">
+	<script src="js/jquery.js"></script>
+</head>
+
 <body>
-	<div class="container">
+	<div id="cv" class="container">
 		<div class="sidebar">
 			<div class="sidebar-top">
 				<img id="user-image" class="profile-image" src="" />
@@ -20,82 +22,113 @@
 			</div>
 			<div class="profile-info">
 				<p class="key">Contact : </p>
-				<p  id="user-contact"class="value"></p>
+				<p id="user-contact" class="value"></p>
 			</div>
 
 			<div class="profile-info">
-				<p class="key" >Email : </p>
-				<p id="user-email" class="value" ></p>
+				<p class="key">Email : </p>
+				<p id="user-email" class="value"></p>
 			</div>
 
 			<div class="profile-info">
-				<p class="key" >Address : </p>
-				<p id="user-address" class="value" ></p>
+				<p class="key">Address : </p>
+				<p id="user-address" class="value"></p>
 			</div>
 			<div class="profile-info">
-				<p class="key" >Skills : </p>
-					<ul id="user-skill" ></ul>
+				<p class="key">Skills : </p>
+				<ul id="user-skill"></ul>
 			</div>
 			<div class="profile-info">
-				<p class="key" >Languages : </p>
-					<ul id="user-language"></ul>
+				<p class="key">Languages : </p>
+				<ul id="user-language"></ul>
 			</div>
 		</div>
 
 		<div class="content">
 			<div class="work-experience">
-			<h1 class="heading"> Work Experience</h1>
-			<div id="user-work-experience"></div>
+				<h1 class="heading"> Work Experience</h1>
+				<div id="user-work-experience"></div>
 			</div>
-			
-			
+
+
 			<div class="education">
 				<h1 class="heading">Education</h1>
 				<div id="user-education"></div>
-				</div>
 			</div>
 		</div>
+	</div>
+	</div>
+
+	<div class="buttonDownloadContainer">
+		<br>
+		<br>
+		<br>
+		<br>
+		<a id="printCVBtn" class="buttonDownload">Download</a>
+		<br>
+		<br>
+		<br>
+		<br>
 	</div>
 
 	<!--  ---------------------------------------------------------------------------- -->
 	<!-- Script -->
 	<!--  ---------------------------------------------------------------------------- -->
-	
+
 	<script src="js/jquery.storage.js"></script>
 	<script src="js/storageCall.js"></script>
-	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
+	<script src="/js/html2canvas.js"></script>
 	<script>
-	  // work experience
-	  $.each($.localStorage('job'), function (i) {
-		$("#user-work-experience").append(
-		  '<div class="info"><p class="sub-heading">'+$.localStorage('job')[i]+' @'+$.localStorage('company')[i]+'</p><p class="duration">'+$.localStorage('jobStart')[i]+' - '+$.localStorage('jobEnd')[i]+'</p><p>'+$.localStorage('jobDescription')[i]+'</p></div>'
-		);
-	  });
-	
-	  // skills
-	  $.each($.localStorage('skillName'), function (i) {
-		$("#user-skill").append(
-		  '<li>'+$.localStorage('skillName')[i]+'</li>'
-		);
-	  });
-	
-	  // languages
-	  $.each($.localStorage('languageName'), function (i) {
-		$("#user-language").append(
-		  '<li>'+$.localStorage('languageName')[i]+'</li>'
-		);
-	  });
-	
-	  // education
-	  $.each($.localStorage('instituteName'), function (i) {
-		$("#user-education").append(
-		  '<div class="info"><p class="sub-heading">'+$.localStorage('degreeName')[i]+' @'+$.localStorage('instituteName')[i]+'</p><p class="duration">'+$.localStorage('degreeStart')[i]+' - '+$.localStorage('degreeEnd')[i]+'</p></div>'
-		);
-	  });
+		// print script
+		$("#printCVBtn").click(function () {
+
+			var cvHeight = $("#cv").outerHeight(true);
+			const filename = 'cv.pdf';
+
+			html2canvas(document.querySelector('#cv'), {
+				height: cvHeight + 300
+			}).then(canvas => {
+				let pdf = new jsPDF('p', 'mm', 'a4');
+				pdf.addImage(canvas.toDataURL('image/png'), 'PNG', 0, 0, 211, 298);
+				pdf.save(filename);
+			});
+		});
+
+		// work experience
+		$.each($.localStorage('job'), function (i) {
+			$("#user-work-experience").append(
+				'<div class="info"><p class="sub-heading">' + $.localStorage('job')[i] + ' @' + $.localStorage('company')[i] +
+				'</p><p class="duration">' + $.localStorage('jobStart')[i] + ' - ' + $.localStorage('jobEnd')[i] + '</p><p>' + $
+				.localStorage('jobDescription')[i] + '</p></div>'
+			);
+		});
+
+		// skills
+		$.each($.localStorage('skillName'), function (i) {
+			$("#user-skill").append(
+				'<li>' + $.localStorage('skillName')[i] + '</li>'
+			);
+		});
+
+		// languages
+		$.each($.localStorage('languageName'), function (i) {
+			$("#user-language").append(
+				'<li>' + $.localStorage('languageName')[i] + '</li>'
+			);
+		});
+
+		// education
+		$.each($.localStorage('instituteName'), function (i) {
+			$("#user-education").append(
+				'<div class="info"><p class="sub-heading">' + $.localStorage('degreeName')[i] + ' @' + $.localStorage(
+					'instituteName')[i] + '</p><p class="duration">' + $.localStorage('degreeStart')[i] + ' - ' + $.localStorage(
+					'degreeEnd')[i] + '</p></div>'
+			);
+		});
 	</script>
-	
-	
+
+
 </body>
+
 </html>
-
-
