--- a/template-2.html
+++ b/template-2.html
@@ -6,21 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>CV-Template 02</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" media="screen" href="css/template02.css">
-<script src="js/jquery.js"></script>
+  <link rel="stylesheet" type="text/css" media="screen" href="css/template02.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="css/downloadButton.css">
+  <script src="js/jquery.js"></script>
 </head>
 
 <body>
-  <div class="wrapper">
+  <div id="cv" class="wrapper">
     <section class="top flex-it flex-row flex-justify-between">
 
       <div class="left flex-it flex-col flex-justify-end">
         <h1 id="user-name"></h1>
-        <h2  id="user-applyingAs"></h2>
+        <h2 id="user-applyingAs"></h2>
       </div><!-- /left -->
 
       <div class="right">
-       <img id="user-image" src="" alt="">
+        <img id="user-image" src="" alt="">
       </div><!-- /right -->
 
     </section><!-- /top -->
@@ -54,16 +55,28 @@
         </div><!-- /row -->
 
         <h3>Languages</h3>
-        <div class="row">
-          <ul id="user-language"></ul>
-        </div><!-- /row -->
+        <ul id="user-language"></ul>
+  </div><!-- /row -->
 
-        <h3>Education</h3>
-        <div class="row" id="user-education"></div>
+  <h3>Education</h3>
+  <div class="row" id="user-education"></div>
 
-      </section><!-- /beta -->
-    </section><!-- /columns -->
+  </section><!-- /beta -->
+  </section><!-- /columns -->
   </div><!-- /wrapper -->
+
+  <div class="buttonDownloadContainer">
+    <br>
+    <br>
+    <br>
+    <br>
+    <a id="printCVBtn" class="buttonDownload">Download</a>
+    <br>
+    <br>
+    <br>
+    <br>
+  </div>
+
 
   <!--  ---------------------------------------------------------------------------- -->
   <!-- Script -->
@@ -71,12 +84,31 @@
 
   <script src="js/jquery.storage.js"></script>
   <script src="js/storageCall.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
+  <script src="/js/html2canvas.js"></script>
   <script>
+    // print script
+    $("#printCVBtn").click(function () {
+
+      var cvHeight = $("#cv").outerHeight(true);
+
+      const filename = 'cv.pdf';
+
+      html2canvas(document.querySelector('#cv'), {
+        height: cvHeight + 300
+      }).then(canvas => {
+        let pdf = new jsPDF('p', 'mm', 'a4');
+        pdf.addImage(canvas.toDataURL('image/png'), 'PNG', 0, 0, 211, 298);
+        pdf.save(filename);
+      });
+    });
+
     // work experience
     $.each($.localStorage('job'), function (i) {
       $("#user-work-experience").append(
-        '<div class="job"><h4>'+$.localStorage('job')[i]+'</h4><h5>'+$.localStorage('company')[i]+'</h5><h6><time>'+$.localStorage('jobStart')[i]+'</time> – <time>'+$.localStorage('jobEnd')[i]+'</time></h6><p>'+$.localStorage('jobDescription')[i]+'</p></div>'
+        '<div class="job"><h4>' + $.localStorage('job')[i] + '</h4><h5>' + $.localStorage('company')[i] +
+        '</h5><h6><time>' + $.localStorage('jobStart')[i] + '</time> – <time>' + $.localStorage('jobEnd')[i] +
+        '</time></h6><p>' + $.localStorage('jobDescription')[i] + '</p></div>'
       );
     });
 
@@ -97,7 +129,9 @@
     // education
     $.each($.localStorage('instituteName'), function (i) {
       $("#user-education").append(
-        '<div class="course"><h5>'+$.localStorage('degreeName')[i]+'<span class="sub-text">, '+$.localStorage('instituteName')[i]+'</span>  <time>'+$.localStorage('degreeStart')[i]+'</time> – <time>'+$.localStorage('degreeEnd')[i]+'</time></h5><h6></h6></div>'
+        '<div class="course"><h5>' + $.localStorage('degreeName')[i] + '<span class="sub-text">, ' + $.localStorage(
+          'instituteName')[i] + '</span>  <time>' + $.localStorage('degreeStart')[i] + '</time> – <time>' + $.localStorage(
+          'degreeEnd')[i] + '</time></h5><h6></h6></div>'
       );
     });
   </script>
