--- a/template-3.html
+++ b/template-3.html
@@ -9,8 +9,9 @@
   <link rel="stylesheet" type="text/css" media="screen" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" media="screen" href="css/template03.css">
-<script src="js/jquery.js"></script>
+  <link rel="stylesheet" type="text/css" media="screen" href="css/template03.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="css/downloadButton.css">
+  <script src="js/jquery.js"></script>
 
   <style>
 
@@ -18,76 +19,89 @@
 </head>
 
 <body>
+  <div id="cv">
+    <header class="header">
+      <div class="container">
+        <div class="teacher-name">
+          <div class="row">
+            <div class="col-sm-9">
+              <h2><strong id="user-name"></strong></h2>
+            </div>
+          </div>
+        </div>
 
-  <header class="header">
+        <div class="row" style="margin-top:20px;">
+          <div class="col-sm-3">
+            <a href="#"> <img id="user-image" class="rounded-circle" src=""></a>
+          </div>
+
+          <div class="col-sm-3 text-center social">
+            <span class="number">Email: <strong id="user-email"></strong></span>
+            <br>
+            <span class="number">Address: <strong id="user-address"></strong></span>
+            <br>
+            <span class="number">Phone: <strong id="user-contact"></strong></span>
+          </div>
+        </div>
+      </div>
+    </header>
     <div class="container">
-      <div class="teacher-name">
-        <div class="row">
-          <div class="col-sm-9">
-            <h2><strong id="user-name"></strong></h2>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="card card-block text-xs-left">
+            <h5><i class="fa fa-user fa-fw"></i>Biography</h5>
+
+            <p id="user-aboutMe"></p>
           </div>
         </div>
       </div>
 
-      <div class="row" style="margin-top:20px;">
-        <div class="col-sm-3">
-          <a href="#"> <img id="user-image" class="rounded-circle" src=""></a>
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="card card-block">
+            <h5><i class="fa fa-building fa-fw"></i>Work Experience</h5>
+            <ul id="user-work-experience" class="list-group" style="margin-top:15px;margin-bottom:15px;"></ul>
+          </div>
         </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="card card-block">
+            <h5><i class="fa fa-rocket fa-fw"></i>Skills</h5>
+            <ul id="user-skill" class="list-group" style="margin-top:15px;margin-bottom:15px;"></ul>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="card card-block">
+            <h5><i class="fa fa-commenting fa-fw"></i>Languages</h5>
+            <ul id="user-language" class="list-group" style="margin-top:15px;margin-bottom:15px;"></ul>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12">
+          <div id="user-education" class="card card-block">
+            <h5><i class="fa fa-graduation-cap fa-fw"></i>Education</h5>
+            <ul class="list-group" style="margin-top:15px;margin-bottom:15px;"></ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-        <div class="col-sm-3 text-center social">
-          <span class="number">Email: <strong id="user-email"></strong></span>
-          <br>
-          <span class="number">Address: <strong id="user-address"></strong></span>
-          <br>
-          <span class="number">Phone: <strong id="user-contact"></strong></span>
-        </div>
-      </div>
-    </div>
-  </header>
-  <div class="container">
-
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="card card-block text-xs-left">
-          <h5><i class="fa fa-user fa-fw"></i>Biography</h5>
-
-          <p id="user-aboutMe"></p>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="card card-block">
-          <h5><i class="fa fa-building fa-fw"></i>Work Experience</h5>
-          <ul id="user-work-experience" class="list-group" style="margin-top:15px;margin-bottom:15px;"></ul>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="card card-block">
-          <h5><i class="fa fa-rocket fa-fw"></i>Skills</h5>
-          <ul id="user-skill" class="list-group" style="margin-top:15px;margin-bottom:15px;"></ul>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="card card-block">
-          <h5><i class="fa fa-commenting fa-fw"></i>Languages</h5>
-          <ul id="user-language" class="list-group" style="margin-top:15px;margin-bottom:15px;"></ul>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12">
-        <div id="user-education" class="card card-block">
-          <h5><i class="fa fa-graduation-cap fa-fw"></i>Education</h5>
-          <ul class="list-group" style="margin-top:15px;margin-bottom:15px;"></ul>
-        </div>
-      </div>
-    </div>
+  <div class="buttonDownloadContainer">
+    <br>
+    <br>
+    <br>
+    <br>
+    <a id="printCVBtn" class="buttonDownload">Download</a>
+    <br>
+    <br>
+    <br>
+    <br>
   </div>
 
 
@@ -97,8 +111,25 @@
 
   <script src="js/jquery.storage.js"></script>
   <script src="js/storageCall.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
+  <script src="/js/html2canvas.js"></script>
   <script>
+    // print script
+    $("#printCVBtn").click(function () {
+
+      var cvHeight = $("#cv").outerHeight(true);
+
+      const filename = 'cv.pdf';
+
+      html2canvas(document.querySelector('#cv'), {
+        height: cvHeight + 300
+      }).then(canvas => {
+        let pdf = new jsPDF('p', 'mm', 'a4');
+        pdf.addImage(canvas.toDataURL('image/png'), 'PNG', 0, 0, 211, 298);
+        pdf.save(filename);
+      });
+    });
+
     // work experience
     $.each($.localStorage('job'), function (i) {
       $("#user-work-experience").append(
