--- a/template-4.html
+++ b/template-4.html
@@ -10,11 +10,12 @@
   <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css">
   <link rel="stylesheet" type="text/css" media="screen" href="https://s.plurk.com/0e89357f530f0a843c68440a020d4eb5.css">
   <link rel="stylesheet" type="text/css" media="screen" href="css/template04.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="css/downloadButton.css">
   <script src="js/jquery.js"></script>
 </head>
 
 <body>
-  <div class="resume">
+  <div id="cv" class="resume">
     <div class="base">
       <div class="profile">
         <div class="photo"><img id="user-image" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/764024/profile/profile-512.jpg" /></div>
@@ -52,6 +53,19 @@
     </div>
   </div>
 
+  <div class="buttonDownloadContainer">
+    <br>
+    <br>
+    <br>
+    <br>
+    <a id="printCVBtn" class="buttonDownload">Download</a>
+    <br>
+    <br>
+    <br>
+    <br>
+  </div>
+
+
   <!--  ---------------------------------------------------------------------------- -->
   <!-- Script -->
   <!--  ---------------------------------------------------------------------------- -->
@@ -64,12 +78,30 @@
 
   <script src="js/jquery.storage.js"></script>
   <script src="js/storageCall.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
+  <script src="/js/html2canvas.js"></script>
   <script>
+    // print script
+    $("#printCVBtn").click(function () {
+
+      var cvHeight = $("#cv").outerHeight(true);
+
+      const filename = 'cv.pdf';
+
+      html2canvas(document.querySelector('#cv'), {
+        height: cvHeight + 300
+      }).then(canvas => {
+        let pdf = new jsPDF('p', 'mm', 'a4');
+        pdf.addImage(canvas.toDataURL('image/png'), 'PNG', 0, 0, 211, 298);
+        pdf.save(filename);
+      });
+    });
+
     // work experience
     $.each($.localStorage('job'), function (i) {
       $("#user-work-experience").append(
-        '<li><span> ' + $.localStorage('job')[i] + '</span><small> ' + $.localStorage('jobStart')[i] + ' -  ' + $.localStorage(
+        '<li><span> ' + $.localStorage('job')[i] + '</span><small> ' + $.localStorage('jobStart')[i] + ' -  ' + $
+        .localStorage(
           'jobEnd')[i] + '</small></li>'
       );
     });
@@ -94,7 +126,8 @@
     // education
     $.each($.localStorage('instituteName'), function (i) {
       $("#user-education").append(
-        '<li><span>' + $.localStorage('instituteName')[i] + '</span><small>' + $.localStorage('degreeStart')[i] + ' - ' +
+        '<li><span>' + $.localStorage('instituteName')[i] + '</span><small>' + $.localStorage('degreeStart')[i] +
+        ' - ' +
         $.localStorage('degreeEnd')[i] + '</small></li>'
       );
     });
