--- a/template-8.html
+++ b/template-8.html
@@ -7,11 +7,12 @@
   <title>CV-Template 08</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="css/template08.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="css/downloadButton.css">
   <script src="js/jquery.js"></script>
 </head>
 
 <body>
-  <div class="resume">
+  <div id="cv" class="resume">
 
     <header>
       <h1 id="user-name"></h1>
@@ -48,18 +49,49 @@
 
   </div><!-- That's a wrap -->
 
+  <div class="buttonDownloadContainer">
+    <br>
+    <br>
+    <br>
+    <br>
+    <a id="printCVBtn" class="buttonDownload">Download</a>
+    <br>
+    <br>
+    <br>
+    <br>
+  </div>
+
   <!--  ---------------------------------------------------------------------------- -->
   <!-- Script -->
   <!--  ---------------------------------------------------------------------------- -->
 
   <script src="js/jquery.storage.js"></script>
   <script src="js/storageCall.js"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
+  <script src="/js/html2canvas.js"></script>
   <script>
+    // print script
+    $("#printCVBtn").click(function () {
+
+      var cvHeight = $("#cv").outerHeight(true);
+
+      const filename = 'cv.pdf';
+
+      html2canvas(document.querySelector('#cv'), {
+        height: cvHeight + 300
+      }).then(canvas => {
+        let pdf = new jsPDF('p', 'mm', 'a4');
+        pdf.addImage(canvas.toDataURL('image/png'), 'PNG', 0, 0, 211, 298);
+        pdf.save(filename);
+      });
+    });
+
     // work experience
     $.each($.localStorage('job'), function (i) {
       $("#user-work-experience").append(
-        '<div class="block"><h2>'+$.localStorage('jobStart')[i]+'-'+$.localStorage('jobEnd')[i]+': '+$.localStorage('company')[i]+'</h2><p><em>Role:</em> '+$.localStorage('job')[i]+'</p><p><em>Responsibilities:</em> '+$.localStorage('jobDescription')[i]+'</p></div>'
+        '<div class="block"><h2>' + $.localStorage('jobStart')[i] + '-' + $.localStorage('jobEnd')[i] + ': ' + $.localStorage(
+          'company')[i] + '</h2><p><em>Role:</em> ' + $.localStorage('job')[i] +
+        '</p><p><em>Responsibilities:</em> ' + $.localStorage('jobDescription')[i] + '</p></div>'
       );
     });
 
@@ -80,7 +112,8 @@
     // education
     $.each($.localStorage('instituteName'), function (i) {
       $("#user-education").append(
-        '<div class="block"><h2>' + $.localStorage('degreeName')[i] + '</h2><p>' + $.localStorage('instituteName')[i] +
+        '<div class="block"><h2>' + $.localStorage('degreeName')[i] + '</h2><p>' + $.localStorage('instituteName')[
+          i] +
         '<br/>' + $.localStorage('degreeStart')[i] + ' - ' + $.localStorage('degreeEnd')[i] + '</p></div>'
       );
     });
